--- a/GDUltimateLnch/GDUltimateLnch.csproj
+++ b/GDUltimateLnch/GDUltimateLnch.csproj
@@ -68,6 +68,8 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Utils\CrashReporter.cs" />
+    <Compile Include="Utils\UpdateSystem.cs" />
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
     </EmbeddedResource>
